# Go_GNN

./: .gitignore  README.md
cpp/: CMakeLists.txt  bindings.cpp  goboard.hpp  graph_creation.hpp  libtorch_test.cpp  main.cpp  search.hpp
data_manipulation/: Data_saving.py  fetch_data.ps1  shuffle.py
interactive/: bot_start.bat  gomcts.pyd  gtp_interface.py  gtp_interface_search.py  play.py  search_bot_start.bat  show.py  test.py  two_bot.py  visualize.py
python/: Data_extract.py  GNN.py  GNN_deep.py  GNN_deep_new.py  Train.py  export.py  inspect_params.py
